# test_sber_analiz

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_rag.ipynb
app/: cli.py  config.py  logging_setup.py
app/llm/: base.py  ollama_client.py
app/rag/: ingest.py  prompting.py  retriever.py
app/security/: guard.py
app/tools/: system.py  timezone.py
data/: mini_df.csv
legacy/: models.py
legacy/russian_fin_news/: mini_df_f.csv
scripts/: build_corpus_from_csv.md  ci_verify.sh  make_qaset_from_csv.py  smoke_llm.py
src/: __init__.py  chatbot.py
src/models/: __init__.py
src/services/: __init__.py  data_service.py  embeddings.py  llm_service.py  system_service.py  token_manager.py
src/utils/: __init__.py  config.py  logger.py
test_results/: detailed_report.json
tests/: test_gigachat_live.py  test_guardrails.py  test_rag_quality.py  test_retriever_small.py  test_tools.py
tests/eval/: test_rag_metrics.py  test_rag_metrics_minimal.py
